// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchTweetResponses returns no quotes 1`] = `
Array [
  Object {
    "created_at": "Wed Oct 10 01:30:24 +0000 2020",
    "entities": undefined,
    "id_str": "111111111111111111",
    "in_reply_to_status_id_str": null,
    "quoted_status_id_str": "000000000000000000",
    "quotes": Array [
      Object {
        "created_at": "Wed Oct 10 01:50:24 +0000 2020",
        "entities": undefined,
        "id_str": "333333333333333333",
        "in_reply_to_status_id_str": null,
        "quoted_status_id_str": "111111111111111111",
        "quotes": Array [],
        "replies": Array [],
        "text": "Yo!",
        "user": Object {
          "name": undefined,
          "profile_image_url_https": undefined,
          "screen_name": "Lisa",
        },
      },
    ],
    "replies": Array [
      Object {
        "created_at": "Wed Oct 10 01:40:24 +0000 2020",
        "entities": undefined,
        "id_str": "444444444444444444",
        "in_reply_to_status_id_str": "111111111111111111",
        "quoted_status_id_str": null,
        "quotes": Array [],
        "replies": Array [],
        "text": "How are you guys?",
        "user": Object {
          "name": undefined,
          "profile_image_url_https": undefined,
          "screen_name": "Beth",
        },
      },
    ],
    "text": "Hey!!",
    "user": Object {
      "name": undefined,
      "profile_image_url_https": undefined,
      "screen_name": "John",
    },
  },
]
`;

exports[`searchTweetResponses returns single tweet quote with child quote and reply 1`] = `
Array [
  Object {
    "created_at": "Wed Oct 10 01:34:24 +0000 2020",
    "entities": undefined,
    "id_str": "222222222222222222",
    "in_reply_to_status_id_str": "000000000000000000",
    "quoted_status_id_str": null,
    "quotes": Array [
      Object {
        "created_at": "Wed Oct 10 02:40:24 +0000 2020",
        "entities": undefined,
        "id_str": "666666666666666666",
        "in_reply_to_status_id_str": null,
        "quoted_status_id_str": "222222222222222222",
        "quotes": Array [],
        "replies": Array [],
        "text": "Hello friends!",
        "user": Object {
          "name": undefined,
          "profile_image_url_https": undefined,
          "screen_name": "Cindy",
        },
      },
    ],
    "replies": Array [
      Object {
        "created_at": "Wed Oct 10 02:30:24 +0000 2020",
        "entities": undefined,
        "id_str": "555555555555555555",
        "in_reply_to_status_id_str": "222222222222222222",
        "quoted_status_id_str": null,
        "quotes": Array [],
        "replies": Array [],
        "text": "How are you guys?",
        "user": Object {
          "name": undefined,
          "profile_image_url_https": undefined,
          "screen_name": "Bob",
        },
      },
    ],
    "text": "Hello world",
    "user": Object {
      "name": undefined,
      "profile_image_url_https": undefined,
      "screen_name": "Marry",
    },
  },
]
`;
